# bevy_engine

./: Cargo.toml
base_stu/: Cargo.toml
base_stu/assets/shaders/: post_processing.wgsl
base_stu/examples/: 2d_material_mesh.rs  2d_mesh.rs  component.rs  control_flow.rs  ecs.rs  entity_queue.rs  generate_2d_material.rs  mesh2d.rs  parent_child.rs  post_processing.rs  render_layer_demo.rs  render_mesh_to_texture.rs  render_to_texture.rs  sprinte.rs
base_stu/src/: main.rs
base_stu/src/materials/: mod.rs
ecs_base/: Cargo.toml
ecs_base/src/: main.rs
gld/: Cargo.toml
gld/src/: main.rs
plugins_stu/: Cargo.toml
plugins_stu/src/: lib.rs  main.rs
render_graph_stu/: Cargo.toml  render_graph.txt
src/: main.rs
